# INE5420

./: .travis.yml  README.md
blender/: Praca_do_Comercio.blend
graphics/: .travis.yml  CMakeLists.txt  Makefile  bezier.h  bezier3d.h  bezier_curve.h  bezier_surface.h  clipping.h  clipping_cs.h  clipping_lb.h  coord.h  display.h  doubles.h  fd.h  fd_surfaces.h  file_conversions.h  graphics.cpp  graphics.h  graphics2d.h  graphics3d.h  main.cpp  obj.h  obj_samples.h  region.h  spline.h  spline_curve.h  surfaces.h  tools.h  transforms.h  ui.cpp  ui.glade  ui.h
graphics/tests/: clipping_cs_tests.cpp  clipping_tests.cpp  coord_tests.cpp  display_tests.cpp  graphics2d_tests.cpp  graphics3d_tests.cpp  graphics_tests.cpp  min_unit.cpp  min_unit.h  obj_tests.cpp  region_tests.cpp
modeling/: tutorial.blend  tutorial.blend1  tutorial.fbx
modeling/Módulo 3/: Pokemon-Dance.blend  Pokemon-Dance.blend1  Pokemon-Dance.bvh  Pokemon.blend  Pokemon.blend1  Tutorial.blend  Tutorial.blend1  Tutorial2.blend  Tutorial2.blend1
modeling/Pokemon/Models/100 - Voltorb/: BR_Voltorb-Shiny01.blend  BR_Voltorb-Shiny01.mtl  BR_Voltorb-Shiny01.x  BR_Voltorb.blend  BR_Voltorb.mtl  BR_Voltorb.x  Biriridama.md5mesh  Biriridama.mtl  Biriridama.psk  Thumbs.db  Voltorb.blend  Voltorb.x
modeling/Pokemon/Models/100 - Voltorb/Minecraft/: BR_Voltorb-Shiny01_MEDIUM.schematic  BR_Voltorb-Shiny01_SMALL.schematic  BR_Voltorb_LARGE.schematic  Voltorb_LARGE.schematic  Voltorb_MEDIUM.schematic  Voltorb_SMALL.schematic
modeling/Pokemon/Models/100 - Voltorb/Textures/: biriridama_0_1.tga  biriridama_0_3.tga  biriridama_1_0.tga  biriridama_1_2.tga
